--- a/package.json
+++ b/package.json
@@ -16,7 +16,21 @@
   },
   "dependencies": {
     "gatsby": "^4.16.0",
+    "gatsby-plugin-image": "^2.16.1",
+    "gatsby-plugin-manifest": "^4.16.0",
+    "gatsby-plugin-offline": "^5.16.0",
+    "gatsby-plugin-react-helmet": "^5.16.0",
+    "gatsby-plugin-sharp": "^4.16.1",
+    "gatsby-source-filesystem": "^4.16.0",
+    "gatsby-transformer-sharp": "^4.16.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "gatsby-plugin-postcss": "^5.16.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2"
   }
 }
